--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "@hapi/boom": "^10.0.0",
+    "express": "^4.18.1",
+    "joi": "^17.6.0"
   }
 }
