--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
+    "faker": "^5.5.3",
     "@hapi/boom": "^10.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
